# capture-it

./: CHANGES.md  Cargo.toml  README.md
examples/: usage.rs
src/: lib.rs
tests/: readme.rs
