[package]
name = "capture-it"
version = "0.4.3"
authors = ["kang-sw <ki6080@gmail.com>"]
edition = "2021"
description = "Modern c++-ish capture syntax for rust"
repository = "https://github.com/kang-sw/capture-it"
license = "MIT"

[dev-dependencies]
futures = "0.3"

[features]
default = ["additional-macros"]
no-std = []
additional-macros = []
